Bug 95021 - Crash in macro dialog
Summary: Crash in macro dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
5.0.1.2 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.4
Keywords:
: 92199 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-10-13 20:22 UTC by Julien Nabet
Modified: 2016-10-25 19:20 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
console logs + bt with debug symbols (10.17 KB, text/plain)
2015-10-13 20:22 UTC, Julien Nabet
Details
Backtrace of crash on Windows 5.0.2 (5.74 KB, text/plain)
2015-10-14 16:16 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2015-10-13 20:22:29 UTC
Created attachment 119565 [details]
console logs + bt with debug symbols

On pc Debian x86-64 with master sources updated today (with enable-dbgutil), I got a crash with following steps:

1) Launch Writer
2) Menu Tools/macros/Organize Dialogs...
3) Select "Untitled 1", click "New..." button then "OK" to let default name
4) Click Edit
5) Menu View/Toolbars, check formcontrols is enabled, if not enable it
6) Select Listbox in formcontrols bar and create a rectangle in the gray window of the center
7) Close the main window of macro
=> crash
Comment 1 Maxim Monastirsky 2015-10-13 20:37:13 UTC
Confirmed with today's master from 71586837f926c5dc7e8146a4e625b57c37343806, only with gtk3. Doesn't crash with gtk or gen.

I also noticed that toolbar buttons don't get highlighted when you hover the pointer over them, and that the Listbox is not visible after drawing it on the dialog.
Comment 2 Buovjaga 2015-10-14 16:16:56 UTC
Created attachment 119613 [details]
Backtrace of crash on Windows 5.0.2

I was reproducing bug 72932 and noticed I get a crash whenever I closed the dialog editor. Is it the same bug as I was using Windows?

Win 7 Pro 64-bit, Version: 5.0.2.2 (x64)
Build ID: 37b43f919e4de5eeaca9b9755ed688758a8251fe
Locale: fi-FI (fi_FI)
Comment 3 Caolán McNamara 2015-11-12 12:24:55 UTC
crash isn't gtk3 only, so changing title
Comment 4 Commit Notification 2015-11-12 12:29:40 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0943adb2f7ec319891c11889b40c9a69f0d1027e

Resolves: tdf#95021 crash on closing macro dialog editor

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2015-11-12 12:36:28 UTC
That's the crash taken care of anyway: https://gerrit.libreoffice.org/#/c/19926/

Not sure what's going on with the mouse over events under gtk3, that's some other problem apparently.
Comment 6 Commit Notification 2015-11-12 21:33:21 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=33df62efe3c94b87b765f8334c8b614eb896338b&h=libreoffice-5-0

Resolves: tdf#95021 crash on closing macro dialog editor

It will be available in 5.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2015-11-16 15:28:01 UTC
*** Bug 92199 has been marked as a duplicate of this bug. ***