Resolves: tdf#95021 crash on closing macro dialog editor

VclPtr related, dialog dtor is never called, so timer
is never stopped and timer refers to deleted parent
data

Change-Id: I804ba082817802c0017e61c6b86c5d3694995ea8